[project]
name = "reflinks"
version = "0.1.0"
description = ""
authors = [{ name = "vvuri" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.115.4,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "pandas>=2.2.3,<3",
    "joblib>=1.4.2,<2",
    "scikit-learn>=1.5.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
