[project]
name = "reflinks"
version = "0.1.0"
description = ""
authors = [{ name = "vvuri" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.115.4,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "joblib>=1.4.2,<2",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
